--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,16 @@
 
   <section>
 
-    <ul>
-      <li><a href="./1-timer.html">Here is Timer</a></li>
-      <li><a href="./2-snackbar.html">Here is Snackbar</a></li>
-    </ul>
+    <form class="form-search" name="form">
+      <input class="input-search" type="text" name="searchQuery" autocomplete="off">
+      <button class="btn-search" type="submit">Search</button>
+    </form>
 
   </section>
 
+
+
+  <script type="module" src="./main.js" defer></script>
 </body>
 
 </html>
