--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,15 @@
   <section>
 
     <form class="form-search" name="form">
-      <input class="input-search" type="text" name="searchQuery" autocomplete="off">
+      <input class="input-search" type="text" name="searchQuery" placeholder="Search images..." autocomplete="off">
       <button class="btn-search" type="submit">Search</button>
     </form>
+
+    <div class="loader">
+      <div class="loader__spinner"></div>
+    </div>
+
+    <ul class="gallery"></ul>
 
   </section>
 
