--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dz 10</title>
+  <title>Dz 11</title>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -17,9 +17,8 @@
       <button class="btn-search" type="submit">Search</button>
     </form>
 
-    <div class="loader">
-      <div class="loader__spinner"></div>
-    </div>
+    <span class="loader is-hidden"></span>
+
 
     <ul class="gallery"></ul>
 
